noinst_LIBRARIES = libarc.a

libarc_a_SOURCES = \
	config.h \
	mblock.c \
	memb.c \
	net.c \
	net.h \
	safe_malloc.h \
	strtab.c \
	strtab.h \
	arc.c \
	arc_lzh.c \
	arc_mime.c \
	arc_tar.c \
	arc_zip.c \
	deflate.c \
	explode.c \
	explode.h \
	inflate.c \
	unlzh.c \
	unlzh.h \
	url.c \
	url_b64decode.c \
	url_buff.c \
	url_cache.c \
	url_dir.c \
	url_file.c \
	url_hqxdecode.c \
	url_inflate.c \
	url_mem.c \
	url_pipe.c \
	url_qsdecode.c \
	url_uudecode.c \
	zip.h \
	url_http.c \
	url_ftp.c \
	url_news.c \
	url_newsgroup.c

EXTRA_DIST = \
	     libarc/ \
	     libarc/mblock.h \
	     libarc/memb.h \
	     libarc/url.h \
	     libarc/arc.h \
	     COPYING

