EXTRA_DIST = \
    GISfx_old.cpp \
    GISfx_old2.cpp \
    GISfx_old3.cpp \
    Makefile.am \
    define.sample \
    empty.xml \
    gl.xml \
    gl2.xml \
    oom-killer.log \
    sample.gif \
    sh_23-tokyo \
    sh_CMD \
    sh_CMD2 \
    sh_TEST \
    sh_all-tokyo \
    sh_eh \
    sh_fuji \
    sh_fuji.old \
    sh_net-23-tokyo \
    sh_only \
    toka_after.png

